Allow revoking of Oauth token
